Updated DSL design
